--- a/src/ipset.pc.in
+++ b/src/ipset.pc.in
@@ -2,6 +2,6 @@ Name: ipset
 Description: Library for storing IP sets and maps
 Version: @VERSION@
 URL: http://github.com/dcreager/ipset/
-Requires: glib-2.0, gio-2.0
+Requires: glib-2.0
 Libs: -L@prefix@/lib -lipset
 Cflags: -I@prefix@/include
