--- a/src/libipset/map/inspection-template.c.in
+++ b/src/libipset/map/inspection-template.c.in
@@ -1,6 +1,6 @@
 /* -*- coding: utf-8 -*-
  * ----------------------------------------------------------------------
- * Copyright © 2009-2010, RedJack, LLC.
+ * Copyright © 2009-2012, RedJack, LLC.
  * All rights reserved.
  *
  * Please see the LICENSE.txt file in this distribution for license
@@ -8,11 +8,11 @@
  * ----------------------------------------------------------------------
  */
 
-#include <glib.h>
+#include <libcork/core.h>
 
-#include <ipset/bdd/nodes.h>
-#include <ipset/ipset.h>
-#include <ipset/internal.h>
+#include "ipset/bdd/nodes.h"
+#include "ipset/ipset.h"
+#include "../internal.h"
 
 
 /**
@@ -22,8 +22,8 @@
  * address — TRUE for IPv4, FALSE for IPv6.)
  */
 
-static guint
-IPMAP_NAME(bit_for_var)(ipset_variable_t var)
+static unsigned int
+IPMAP_NAME(bit_for_var)(ipset_variable var)
 {
     return (var - 1);
 }
@@ -33,21 +33,20 @@ IPMAP_NAME(bit_for_var)(ipset_variable_t var)
  * An assignment function that can be used to evaluate an IP map BDD.
  */
 
-static gboolean
-IPMAP_NAME(assignment)(gconstpointer addr, ipset_variable_t var)
+static bool
+IPMAP_NAME(assignment)(const void *addr, ipset_variable var)
 {
-    if (var == 0)
-    {
+    if (var == 0) {
         return IP_DISCRIMINATOR_VALUE;
     } else {
-        guint  bit = IPMAP_NAME(bit_for_var)(var);
+        unsigned int  bit = IPMAP_NAME(bit_for_var)(var);
         return IPSET_BIT_GET(addr, bit);
     }
 }
 
 
-gint
-IPMAP_NAME(get)(ip_map_t *map, gpointer elem)
+int
+IPMAP_NAME(get)(struct ip_map *map, CORK_IP *elem)
 {
     return ipset_node_evaluate
         (map->map_bdd, IPMAP_NAME(assignment), elem);
