Build examples/ipv4-set-size program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,4 +65,5 @@ endif(CMAKE_COMPILER_IS_GNUCC)
 add_subdirectory(docs)
 add_subdirectory(include)
 add_subdirectory(src)
+add_subdirectory(examples)
 add_subdirectory(tests)
