Amendment to range checking in ipsetbuild
1. Changes the cork error type to CORK_PARSE_ERROR.
2. Fixes formatting of source code to align to 80 characters.

--- a/src/libipset/set/internal-template.c.in
+++ b/src/libipset/set/internal-template.c.in
@@ -36,7 +36,8 @@ IPSET_NAME(make_ip_bdd)(CORK_IP *addr, unsigned int cidr_prefix)
     /* Special case — the BDD for a netmask that's out of range never
      * evaluates to true. */
     if ((cidr_prefix == 0) || (cidr_prefix > IP_BIT_SIZE)) {
-        cork_error_set(IPSET_ERROR, IPSET_IO_ERROR, "CIDR block %u out of range [0..%u]", cidr_prefix, IP_BIT_SIZE);
+        cork_error_set(IPSET_ERROR, IPSET_PARSE_ERROR, 
+                "CIDR block %u out of range [0..%u]", cidr_prefix, IP_BIT_SIZE);
         return ipset_node_cache_terminal(ipset_cache, false);
     }
 
