--- a/src/libipset/set/internal-template.c.in
+++ b/src/libipset/set/internal-template.c.in
@@ -11,6 +11,7 @@
 #include <libcork/core.h>
 
 #include "ipset/bdd/nodes.h"
+#include "ipset/errors.h"
 #include "ipset/ipset.h"
 #include "ipset/logging.h"
 #include "../internal.h"
