Extract bit macros into separate header

--- a/src/libipset/map/inspection-template.c.in
+++ b/src/libipset/map/inspection-template.c.in
@@ -11,6 +11,7 @@
 #include <libcork/core.h>
 
 #include "ipset/bdd/nodes.h"
+#include "ipset/bits.h"
 #include "ipset/ipset.h"
 #include "../internal.h"
 
