Simplify BDD operator implementation
Before, we used some standard BDD operators to implement sets and maps.
For instance, to add an address to a set, we'd construct a BDD that
represented the address, and then use the BDD OR (∨) operator to add the
address's BDD to the set's BDD.  The result would be the new BDD for the
set.  (For maps, we'd use the if-then-else (ITE) operator, which
short-circuit ∨ is a special case of.)  We also used the standard
implementation strategy of memoizing the results of each of the BDD
operators.

This patch simplifies things by merging the two steps (construct a BDD
for the address; add it to the set) into a single operation, implemented
in the new `ipset_bdd_node_insert` function.

Doing this has a couple of benefits.  First, each individual insertion
is now slightly faster, since we only have to recurse through the
structure of the new IP address once.  (Before we had to do this once
while creating the address's BDD, and once while adding it to the set's
BDD.)

Second, and more importantly, it let's us get rid of the per-operator
caches.  This, in turn, will make it simpler to expire unused
nonterminal nodes once they're no longer needed.  And that, in turn,
will reduce the memory requirements of building up a large set.

--- a/src/libipset/set/inspection-template.c.in
+++ b/src/libipset/set/inspection-template.c.in
@@ -12,6 +12,7 @@
 
 #include "ipset/bdd/nodes.h"
 #include "ipset/bits.h"
+#include "ipset/errors.h"
 #include "ipset/ipset.h"
 #include "../internal.h"
 
@@ -51,4 +52,42 @@ IPSET_PRENAME(contains)(const struct ip_set *set, CORK_IP *elem)
 {
     return ipset_node_evaluate
         (ipset_cache, set->set_bdd, IPSET_NAME(assignment), elem);
+}
+
+
+bool
+IPSET_NAME(add_network)(struct ip_set *set, CORK_IP *elem,
+                        unsigned int cidr_prefix)
+{
+    /* Special case — the BDD for a netmask that's out of range never
+     * evaluates to true. */
+    if ((cidr_prefix == 0) || (cidr_prefix > IP_BIT_SIZE)) {
+        cork_error_set
+            (IPSET_ERROR, IPSET_PARSE_ERROR,
+             "CIDR block %u out of range [0..%u]", cidr_prefix, IP_BIT_SIZE);
+        return false;
+    }
+
+    ipset_node_id  new_bdd =
+        ipset_node_insert
+        (ipset_cache, set->set_bdd,
+         IPSET_NAME(assignment), elem, cidr_prefix + 1, 1);
+    bool  result = (new_bdd == set->set_bdd);
+    ipset_node_decref(ipset_cache, set->set_bdd);
+    set->set_bdd = new_bdd;
+    return result;
+}
+
+
+bool
+IPSET_NAME(add)(struct ip_set *set, CORK_IP *elem)
+{
+    ipset_node_id  new_bdd =
+        ipset_node_insert
+        (ipset_cache, set->set_bdd,
+         IPSET_NAME(assignment), elem, IP_BIT_SIZE + 1, 1);
+    bool  result = (new_bdd == set->set_bdd);
+    ipset_node_decref(ipset_cache, set->set_bdd);
+    set->set_bdd = new_bdd;
+    return result;
 }
