--- a/src/libipset/map/inspection-template.c.in
+++ b/src/libipset/map/inspection-template.c.in
@@ -12,6 +12,7 @@
 
 #include "ipset/bdd/nodes.h"
 #include "ipset/bits.h"
+#include "ipset/errors.h"
 #include "ipset/ipset.h"
 #include "../internal.h"
 
@@ -51,4 +52,38 @@ IPMAP_NAME(get)(struct ip_map *map, CORK_IP *elem)
 {
     return ipset_node_evaluate
         (ipset_cache, map->map_bdd, IPMAP_NAME(assignment), elem);
+}
+
+
+void
+IPMAP_NAME(set_network)(struct ip_map *map, CORK_IP *elem,
+                        unsigned int cidr_prefix, int value)
+{
+    /* Special case — the BDD for a netmask that's out of range never
+     * evaluates to true. */
+    if ((cidr_prefix == 0) || (cidr_prefix > IP_BIT_SIZE)) {
+        cork_error_set
+            (IPSET_ERROR, IPSET_PARSE_ERROR,
+             "CIDR block %u out of range [0..%u]", cidr_prefix, IP_BIT_SIZE);
+        return;
+    }
+
+    ipset_node_id  new_bdd =
+        ipset_node_insert
+        (ipset_cache, map->map_bdd,
+         IPMAP_NAME(assignment), elem, cidr_prefix + 1, value);
+    ipset_node_decref(ipset_cache, map->map_bdd);
+    map->map_bdd = new_bdd;
+}
+
+
+void
+IPMAP_NAME(set)(struct ip_map *map, CORK_IP *elem, int value)
+{
+    ipset_node_id  new_bdd =
+        ipset_node_insert
+        (ipset_cache, map->map_bdd,
+         IPMAP_NAME(assignment), elem, IP_BIT_SIZE + 1, value);
+    ipset_node_decref(ipset_cache, map->map_bdd);
+    map->map_bdd = new_bdd;
 }
