--- a/src/libipset/set/inspection-template.c.in
+++ b/src/libipset/set/inspection-template.c.in
@@ -14,7 +14,6 @@
 #include "ipset/bits.h"
 #include "ipset/errors.h"
 #include "ipset/ipset.h"
-#include "../internal.h"
 
 
 /**
@@ -51,7 +50,7 @@ bool
 IPSET_PRENAME(contains)(const struct ip_set *set, CORK_IP *elem)
 {
     return ipset_node_evaluate
-        (ipset_cache, set->set_bdd, IPSET_NAME(assignment), elem);
+        (set->cache, set->set_bdd, IPSET_NAME(assignment), elem);
 }
 
 
@@ -70,10 +69,10 @@ IPSET_NAME(add_network)(struct ip_set *set, CORK_IP *elem,
 
     ipset_node_id  new_bdd =
         ipset_node_insert
-        (ipset_cache, set->set_bdd,
+        (set->cache, set->set_bdd,
          IPSET_NAME(assignment), elem, cidr_prefix + 1, 1);
     bool  result = (new_bdd == set->set_bdd);
-    ipset_node_decref(ipset_cache, set->set_bdd);
+    ipset_node_decref(set->cache, set->set_bdd);
     set->set_bdd = new_bdd;
     return result;
 }
@@ -84,10 +83,10 @@ IPSET_NAME(add)(struct ip_set *set, CORK_IP *elem)
 {
     ipset_node_id  new_bdd =
         ipset_node_insert
-        (ipset_cache, set->set_bdd,
+        (set->cache, set->set_bdd,
          IPSET_NAME(assignment), elem, IP_BIT_SIZE + 1, 1);
     bool  result = (new_bdd == set->set_bdd);
-    ipset_node_decref(ipset_cache, set->set_bdd);
+    ipset_node_decref(set->cache, set->set_bdd);
     set->set_bdd = new_bdd;
     return result;
 }
