Performance test of ipset_contains_ipv4
This patch adds a program that tests the performance of the
ipset_contains_ipv4 function.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,5 +12,8 @@ include_directories(../include)
 #-----------------------------------------------------------------------
 # Examples
 
+add_executable(contains contains.c)
+target_link_libraries(contains ${CORK_LIBRARIES} libipset)
+
 add_executable(ipv4-set-size ipv4-set-size.c)
 target_link_libraries(ipv4-set-size ${CORK_LIBRARIES} libipset)
