Function for reading IP lists
We provide a function that reads IP lists from a text file and returns
a fully formed IP set.  The format of the text file can be individual
IP addresses, negated address (denoted by prepending a '!'), and CIDR
blocks.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ set(LIBIPSET_SRC
     libipset/map/ipv6_map.c
     libipset/map/storage.c
     libipset/set/allocation.c
+    libipset/set/read-file.c
     libipset/set/inspection.c
     libipset/set/ipv4_set.c
     libipset/set/ipv6_set.c
