support cmake threads
Cherry-Pick a few changes from John Zachary's own github repo
to support CMake Threads.

Thanks to great support from one of the original author of this library,
John Zachary <jzachary@jzachary.net>

The patch is rebased to latest dcreager/libcorkipset tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,10 @@ if(GIT_SHA1_RESULT)
 endif(GIT_SHA1_RESULT)
 message(STATUS "Current revision: " ${GIT_SHA1})
 
+find_package(Threads)
+set(THREADS_LDFLAGS "${CMAKE_THREAD_LIBS_INIT}")
+set(THREADS_STATIC_LDFLAGS "${CMAKE_THREAD_LIBS_INIT}")
+
 #-----------------------------------------------------------------------
 # Set some options
 
