--- a/.buzzy/package.yaml
+++ b/.buzzy/package.yaml
@@ -2,6 +2,7 @@ name: ipset
 build_dependencies:
   - pkg-config
   - check >= 0.9.4
+  - python-sphinx
 dependencies:
   - libcork >= 0.12.0
 license: BSD
