Clean up copyright information
Instead of listing individual copyright authors in each source file,
there's now a single top-level AUTHORS file listing the copyright
holders.  It also updates each copyright notice to only include a single
year — the year when any of the contents of the file were first written.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 # ----------------------------------------------------------------------
-# Copyright © 2011-2015, RedJack, LLC.
+# Copyright © 2011, libcorkipset authors
 # All rights reserved.
 #
 # Please see the COPYING file in this distribution for license details.
