Rename ipset → libcorkipset
`ipset` is pretty generic, and already taken.  Arch and Debian both
renamed this to libcorkipset, so that's what we'll do too!

I've cleaned up the header files a bit; the main one is now installed as
<libcork/ipset.h> instead of <libcorkipset/ipset.h>, which is what's
used in the current Arch and Debian packages.  I've kept a copy
available at the old location, with a deprecation warning telling you
about the new location.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 # ----------------------------------------------------------------------
 
 cmake_minimum_required(VERSION 2.6)
-set(PROJECT_NAME ipset)
+set(PROJECT_NAME libcorkipset)
 set(RELEASE_DATE 2013-12-11)
 project(${PROJECT_NAME})
 enable_testing()
