--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   # Buzzy to build/test the package.
   - git fetch
   # Download and install Buzzy
-  - wget https://github.com/dcreager/buzzy/releases/download/0.6.0/buzzy_0.6.0_trusty_amd64.deb -O buzzy.deb
+  - wget https://github.com/dcreager/buzzy/releases/download/0.6.0/ubuntu.trusty.buzzy_0.6.0_amd64.deb -O buzzy.deb
   - sudo dpkg -i buzzy.deb
 script: buzzy test
 
@@ -17,4 +17,3 @@ script: buzzy test
 branches:
   only:
     - master
-    - develop
